# APF-UE4SS

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
APClientLib/: CMakeLists.txt
APClientLib/include/: ap_action_executor.h  ap_client_manager.h  ap_client_types.h  ap_clientlib_exports.h  ap_ipc_client.h  ap_path_util.h
APClientLib/src/: ap_action_executor.cpp  ap_client_manager.cpp  ap_ipc_client.cpp  ap_path_util.cpp  main.cpp  placeholder.cpp
APFrameworkCore/: CMakeLists.txt
APFrameworkCore/include/: ap_capabilities.h  ap_client.h  ap_config.h  ap_exports.h  ap_ipc_server.h  ap_logger.h  ap_manager.h  ap_message_router.h  ap_mod_registry.h  ap_path_util.h  ap_polling_thread.h  ap_state_manager.h  ap_types.h  atomic_state.h  message_queues.h  retry_util.h  stop_token.h  thread_safe_queue.h
APFrameworkCore/src/: ap_capabilities.cpp  ap_client.cpp  ap_config.cpp  ap_exports.cpp  ap_ipc_server.cpp  ap_logger.cpp  ap_manager.cpp  ap_message_router.cpp  ap_mod_registry.cpp  ap_path_util.cpp  ap_polling_thread.cpp  ap_state_manager.cpp  main.cpp
Mods/APFrameworkMod/: framework_config.json  manifest.json
Mods/APFrameworkMod/Scripts/: main.lua  registry_helper.lua
Mods/ExampleClientMod/: manifest.json
Mods/ExampleClientMod/Scripts/: main.lua
docs/Architecture/: ARCHITECTURE.md  Design01_SystemComponents.md  Design02_CapabilitiesSystem.md  Design03_LifecycleStateMachine.md  Design04_IPCProtocol.md  Design05_MessageRouting.md  Design06_PriorityClients.md  Design07_APWorldIntegration.md  Design08_ErrorHandling.md  Design09_Dependencies.md  Design10_Threading.md
tests/: CMakeLists.txt
worlds/apf/: Items.py  Locations.py  Options.py  Rules.py  __init__.py
worlds/apf/docs/setup/: setup_en.md
